--- a/src/app/pages/feature/onboardfeature/onboardfeature.page.scss
+++ b/src/app/pages/feature/onboardfeature/onboardfeature.page.scss
@@ -381,4 +381,22 @@ app-onboardfeature {
     color: var(--ion-color-grey);
     text-wrap: normal;
   }
+
+  quill-editor {
+    width: 100%;
+    margin-right: 8px;
+  }
+
+  .ql-container,.ql-editor, .ql-editor.ql-blank, .ql-editor.ql-blank::before, .ql-editor.ql-blank::after {
+    -khtml-user-select: text !important;
+    -moz-user-select: text !important;
+    -ms-user-select: text !important;
+    user-select: text !important;
+    -webkit-user-select: text !important;
+  }
+
+  .ql-editor.ql-blank::before {
+    color: var(--ion-color-dark);
+  }
+
 }
