--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -628,6 +628,10 @@ app-showfeature {
     margin-right: 8px;
   }
 
+  .ql-editor.ql-blank::before {
+    color: var(--ion-color-dark);
+  }
+
   .ql-container,.ql-editor, .ql-editor.ql-blank, .ql-editor.ql-blank::before, .ql-editor.ql-blank::after {
     -khtml-user-select: text !important;
     -moz-user-select: text !important;
@@ -739,6 +743,10 @@ app-showfeature {
   .goal-container {
     height: 86px;
     overflow: hidden;
+  }
+
+  .goal-label {
+    --background: var(--ion-color-secondary);
   }
 
   .calendar-item-goal-attributes {
