bug fix, improve css
1.8.0 (5)

--- a/src/app/pages/user/notifications/notifications.page.html
+++ b/src/app/pages/user/notifications/notifications.page.html
@@ -9,7 +9,7 @@
 
 <ion-content *ngIf="userData && userData.user">
   <!--Push Notifications-->
-  <ion-item lines="none" color="grey">Push Notifications</ion-item>
+  <ion-item lines="none" color="lightgrey">Push Notifications</ion-item>
   <ion-item>
     <ion-label>Chat Messages</ion-label>
     <ion-select [(ngModel)]="UIpushNotifyUnreadChatMessages" (ionChange)="saveChange('Push', $event)" slot="end">
@@ -27,7 +27,7 @@
     </ion-select>
   </ion-item>
   <!--Email Notifications-->
-  <ion-item lines="none" color="grey">Email Notifications</ion-item>
+  <ion-item lines="none" color="lightgrey">Email Notifications</ion-item>
   <ion-item>
     <ion-label>Chat Messages</ion-label>
     <ion-select [(ngModel)]="UIemailNotifyUnreadChatMessages" (ionChange)="saveChange('Email', $event)" slot="end">
