--- a/src/app/pages/user/settings/settings.page.html
+++ b/src/app/pages/user/settings/settings.page.html
@@ -11,7 +11,7 @@
 
   <!--CONTACTS-->
   <div *ngIf="platform.is('cordova')">
-    <ion-item lines="none" color="grey">Find Friends on Restvo</ion-item>
+    <ion-item lines="none" color="lightgrey">Find Friends on Restvo</ion-item>
     <ion-item>
       <ion-label>Import Address Book</ion-label>
       <ion-toggle slot="end" [(ngModel)]="UIimportContactList" (ionChange)="toggleImportContactList()"></ion-toggle>
@@ -19,7 +19,7 @@
   </div>
 
 <!--  &lt;!&ndash;ACCOUNT&ndash;&gt;
-  <ion-item lines="none" color="grey">Account</ion-item>
+  <ion-item lines="none" color="lightgrey">Account</ion-item>
   <ion-item>
     <ion-label>Restvo ID</ion-label>
     <ion-label *ngIf="userData.user.mobile" color="grey" style="text-align: right;">{{userData.user.mobile}}</ion-label>
@@ -27,10 +27,10 @@
   </ion-item>
   <ion-item>
     <ion-label>Full Name</ion-label>
-    <ion-label color="grey" style="text-align: right;">{{userData.user.first_name}} {{userData.user.last_name}}</ion-label>
+    <ion-label color="lightgrey" style="text-align: right;">{{userData.user.first_name}} {{userData.user.last_name}}</ion-label>
   </ion-item>-->
 
-  <ion-item lines="none" color="grey">Privacy</ion-item>
+  <ion-item lines="none" color="lightgrey">Privacy</ion-item>
   <ion-item class="ion-text-wrap">
     <ion-label>Allow to be Discovered <ion-icon name="information-circle" (click)="explainDiscover()"></ion-icon></ion-label>
     <ion-toggle [(ngModel)]="UIAllowedDiscovered" (ionChange)="toggleAllowedDiscovered()"></ion-toggle>
@@ -41,7 +41,7 @@
   </ion-item>
 
   <!--SECURITY-->
-  <ion-item lines="none" color="grey">Security</ion-item>
+  <ion-item lines="none" color="lightgrey">Security</ion-item>
   <ion-button color='light' (click)="resetPassword()" shape="round" expand="full" class="ion-margin-vertical">
     <span *ngIf="userData.user.password">Reset Password</span>
     <span *ngIf="!userData.user.password">Create Password</span>
