--- a/src/app/pages/user/profile/profile.page.html
+++ b/src/app/pages/user/profile/profile.page.html
@@ -15,7 +15,7 @@
     </ion-grid>
     <form [formGroup]="userForm">
         <ion-list *ngIf="user && user._id">
-            <ion-item lines="none" color="grey">
+            <ion-item lines="none"  color="lightgrey">
                 Profile Picture
             </ion-item>
             <ion-item class="ion-text-wrap" lines="none">
@@ -51,7 +51,7 @@
                     This is a required field.
                 </p>
             </ion-item>
-            <ion-item lines="none" color="grey">
+            <ion-item lines="none"  color="lightgrey">
                 Account Information
             </ion-item>
             <ion-item-divider class="ion-text-wrap">
@@ -92,7 +92,7 @@
                     Invalid mobile number.
                 </p>
             </ion-item>
-            <ion-item lines="none" color="grey">
+            <ion-item lines="none"  color="lightgrey">
                 Contact Info
             </ion-item>
             <ion-item-divider class="ion-text-wrap">
