improve code style, add create relationship to showrecipient.page
1.8.0 (5)

--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
@@ -130,8 +130,8 @@
       <ion-row *ngIf="!isConnected"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="messageRecipient()">Add as Friend</ion-button></ion-col></ion-row>
       <ion-row *ngIf="!userHasSharedContact && isConnected && !isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="shareContactInfo()">Share My Contact Info</ion-button></ion-col></ion-row>
       <ion-row *ngIf="userHasSharedContact && isConnected && !isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='warning' (click)="shareContactInfo()">Turn Off Sharing My Contact Info</ion-button></ion-col></ion-row>
-      <ion-row *ngIf="!isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="inviteToGroup()">Invite to Group</ion-button></ion-col></ion-row>
-      <!--<ion-row *ngIf="!isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="inviteToCommunity()">Invite to Community</ion-button></ion-col></ion-row>-->
+      <!--<ion-row *ngIf="!isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="inviteToGroup()">Invite to Group</ion-button></ion-col></ion-row>-->
+      <ion-row *ngIf="!isBlocked"><ion-col><ion-button expand='full' size="small" shape="round" color='primary' (click)="createRelationship()">Create Relationship</ion-button></ion-col></ion-row>
       <ion-row><ion-col><ion-button expand='full' size="small" shape="round" color='warning' (click)="reportUserAbuse($event)">Report {{recipient.first_name}}</ion-button></ion-col></ion-row>
     </div>
 
