--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -520,7 +520,7 @@
         </div>
       </div>
       <div class="component" *ngIf="item === 10370"> <!--Plan-->
-        <ion-slides class="program-slides" #plansSlides [options]="{slidesPerView: 3.5, grabCursor: true}">
+        <ion-slides class="program-slides" #plansSlides [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
           <ion-slide class="program-slide" *ngFor="let program of planModules; trackBy: customTrackBy">
             <ion-card class="program-card" (click)="openProgram($event, program)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
               <ion-card-content class="ion-no-padding">
