--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -106,7 +106,7 @@
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
       <ion-label class="section-label" color="darkgrey">My Mentors</ion-label>
     </ion-item>
-    <ion-slides class="relationship-slides" #programsSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="relationship-slide" *ngFor="let relationship of myMentors; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
         <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
           <ion-card-header class="ion-no-padding ion-justify-content-center">
@@ -138,7 +138,7 @@
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
       <ion-label class="section-label" color="darkgrey">My Mentees</ion-label>
     </ion-item>
-    <ion-slides class="relationship-slides" #programsSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
         <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
           <ion-card-header class="ion-no-padding">
@@ -170,7 +170,7 @@
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
       <ion-label class="section-label" color="darkgrey">My Community</ion-label>
     </ion-item>
-    <ion-slides class="program-slides" #programsSlides [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="program-slides" [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
         <ion-card class="program-card" (click)="openProgram($event, program)">
           <ion-card-header class="ion-no-padding">
