--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -1,7 +1,7 @@
 <ion-header [hidden]="router.url.includes('/app/user') && !modalPage">
   <ion-toolbar color="lightgrey" *ngIf="(platform.is('mobileweb') && (platform.is('ios') || platform.is('android'))) && userData.showDownloadLink">
     <ion-item-sliding side="end">
-      <ion-item lines="none"  color="lightgrey">
+      <ion-item lines="none" color="lightgrey">
         <ion-avatar slot="start">
           <ion-img src="assets/img/icon.png"></ion-img>
         </ion-avatar>
@@ -9,7 +9,7 @@
           <a *ngIf="platform.is('ios')" href="https://itunes.apple.com/us/app/restvo-connect-with-churches/id1365903479?ls=1&mt=8" style="font-size: 14px; color: var(--ion-color-button1)">Download app for better experience</a>
           <a *ngIf="platform.is('android')" href="https://play.google.com/store/apps/details?id=com.restvo.app" style="font-size: 14px; color: var(--ion-color-button1)">Download app for better experience</a>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
         <!--<ion-button fill="clear" slot="end"><ion-icon name="close"></ion-icon></ion-button>-->
       </ion-item>
       <ion-item-options>
@@ -22,12 +22,12 @@
   <ion-toolbar>
     <ion-menu-toggle menu="main" *ngIf="!modalPage && userData.user" slot="start" fill="clear" id='menuToggle'>
       <ion-button fill="clear" color="grey">
-        <ion-badge *ngIf="this.chatService && this.chatService.connectTabBadge" color="grey">{{this.chatService.connectTabBadge}}</ion-badge>
         <ion-icon name="menu"></ion-icon>
       </ion-button>
+      <ion-badge *ngIf="this.chatService && this.chatService.connectTabBadge" color="primary" mode="md">{{this.chatService.connectTabBadge}}</ion-badge>
     </ion-menu-toggle>
     <ion-buttons slot="start" *ngIf="modalPage">
-      <ion-button (click)="closeModal()"><ion-icon name="arrow-back"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title slot="start" *ngIf="view === 'profile'">Me</ion-title>
     <ion-title slot="start" *ngIf="view === 'calendar'">Calendar</ion-title>
@@ -60,7 +60,7 @@
           <ion-label class="ion-margin-top">Complete Your Profile</ion-label>
           <p class="message-detail">Answer a few questions to complete your profile.</p>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
       </ion-item>
       <ion-item-options>
         <ion-item-option color="primary" (click)="authService.incompleteOnboardProcess = null">
@@ -77,36 +77,51 @@
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
-  <ion-row class="ion-justify-content-center ion-margin-vertical" *ngIf="view === 'profile'">
-    <ion-card id="person-profile-card" class="person-card" (click)="openMyProfile()">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
-      <ion-card-header>
-        <div class="person-photo-container">
-          <ion-img class="person-photo" *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
-          <ion-img class="person-photo" *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
-        </div>
-      </ion-card-header>
-      <div class="top-pattern"></div>
-      <div class="middle-pattern"></div>
-      <div class="bottom-pattern"></div>
-      <ion-card-content class="person-content ion-no-padding">
-        <ion-item lines="none" class="person-content-item ion-no-margin">
-          <div class="person-content-left">
-            <div class="person-name ion-text-md-uppercase">
-              {{userData.user.first_name}} {{userData.user.last_name}}
-            </div>
-            <div class="person-title" [innerHTML]="userData.user.title"></div>
+  <ion-grid class="person-container">
+    <ion-row class="ion-justify-content-center ion-margin-vertical" *ngIf="view === 'profile'">
+      <!-- <ion-card id="person-profile-card" class="person-card" (click)="openMyProfile()">
+        <ion-card-header>
+          <div class="person-photo-container">
+            <ion-img class="person-photo" *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
+            <ion-img class="person-photo" *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
           </div>
-          <div class="person-content-right" [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div> <!--Short Biography-->
-        </ion-item>
-      </ion-card-content>
-    </ion-card>
-  </ion-row>
+        </ion-card-header>
+        <div class="top-pattern"></div>
+        <div class="middle-pattern"></div>
+        <div class="bottom-pattern"></div>
+        <ion-card-content class="person-content ion-no-padding">
+          <ion-item lines="none" class="person-content-item ion-no-margin">
+            <div class="person-content-left">
+              <div class="person-name ion-text-md-uppercase">
+                {{userData.user.first_name}} {{userData.user.last_name}}
+              </div>
+              <div class="person-title" [innerHTML]="userData.user.title"></div>
+            </div>
+            <div class="person-content-right" [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div>
+          </ion-item>
+        </ion-card-content>
+      </ion-card> -->
+      <ion-col>
+        <ion-avatar>
+          <ion-img class="person-photo" *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
+        </ion-avatar>
+        <ion-avatar>
+          <ion-img class="person-photo" *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
+        </ion-avatar>
+      </ion-col>
+      <ion-col>
+        <h1>{{userData.user.first_name}} {{userData.user.last_name}}</h1>
+        <div class="person-content-right" [ngClass]="{'content-border': bio }" [innerHTML]="userData.user.bio"></div>
+        <ion-button fill="solid" shape="round" color="primary" size="small">Edit Profile</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <!--List My Mentors-->
   <div *ngIf="myMentors && myMentors.length && view === 'profile'">
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
       <ion-label class="section-label" color="darkgrey">My Mentors</ion-label>
     </ion-item>
-    <ion-slides class="relationship-slides" #programsSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="relationship-slide" *ngFor="let relationship of myMentors; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
         <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
           <ion-card-header class="ion-no-padding ion-justify-content-center">
@@ -138,7 +153,7 @@
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
       <ion-label class="section-label" color="darkgrey">My Mentees</ion-label>
     </ion-item>
-    <ion-slides class="relationship-slides" #programsSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="relationship-slides" [options]="{slidesPerView: 2.8, grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
         <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
           <ion-card-header class="ion-no-padding">
@@ -170,7 +185,7 @@
     <ion-item class="section" color="lightgrey" lines="none"> <!--section header-->
       <ion-label class="section-label" color="darkgrey">My Community</ion-label>
     </ion-item>
-    <ion-slides class="program-slides" #programsSlides [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
+    <ion-slides class="program-slides" [options]="{slidesPerView: 3.5, grabCursor: true, updateOnWindowResize: true}">
       <ion-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
         <ion-card class="program-card" (click)="openProgram($event, program)">
           <ion-card-header class="ion-no-padding">
@@ -211,9 +226,9 @@
     <!--CALENDAR SECTION-->
     <ion-card class="calendar-container" *ngIf="calendarService.calendar.mode == 'month' || calendarService.calendar.mode == 'week'">
       <div class="month-title-container">
-        <ion-icon name="ios-arrow-back" class="calendar-arrow left" (click)="calendarService.changeDate($event, 4)"></ion-icon>
+        <ion-icon name="chevron-back-outline" class="calendar-arrow left" (click)="calendarService.changeDate($event, 4)"></ion-icon>
         <h4 class="month-title">{{calendarService.calendar.viewTitle}}</h4>
-        <ion-icon name="ios-arrow-forward" class="calendar-arrow right" (click)="calendarService.changeDate($event, 2)"></ion-icon>
+        <ion-icon name="chevron-forward-outline" class="calendar-arrow right" (click)="calendarService.changeDate($event, 2)"></ion-icon>
       </div>
 
       <div class="monthview-day-headers">S</div>
@@ -276,16 +291,15 @@
   <ion-list class="system-message-container ion-padding" *ngIf="!noSystemMessage">
     <ion-item>
       <ion-buttons slot="end">
-        <ion-button fill="solid" shape="round" color="primary" size="small" (click)="handleSystemMessages('accept')">Accept All</ion-button>
-        <ion-button fill="clear" shape="round" color="primary" size="small" (click)="handleSystemMessages('clear')">Clear All</ion-button>
+        <ion-button fill="solid" color="primary" size="small" (click)="handleSystemMessages('accept')">Accept All</ion-button>
+        <ion-button fill="clear" color="primary" size="small" (click)="handleSystemMessages('clear')">Clear All</ion-button>
       </ion-buttons>
     </ion-item>
     <div *ngFor="let pendingNotification of pendingNotifications; trackBy: customTrackBy">
       <ion-item class="ion-text-wrap" (click)="viewMessage($event, pendingNotification)" *ngIf="pendingNotification.message.toLowerCase().indexOf(this.searchKeyword.toLowerCase()) > -1" lines="none">
-        <p style="color: black;">{{pendingNotification.message}}</p>
-        <ion-icon color="primary" name="more" slot="end"></ion-icon>
+        <p style="color: var(--ion-color-dark);">{{pendingNotification.message}}</p>
+        <ion-icon color="primary" ios="ellipsis-horizontal" md="ellipsis-vertical" slot="end"></ion-icon>
       </ion-item>
     </div>
   </ion-list>
 </ion-content>
-
