--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -33,7 +33,7 @@
     <ion-title slot="start" *ngIf="view === 'calendar'">Calendar</ion-title>
       <ion-searchbar class="header-searchbar" [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)" *ngIf="platform.width() >= 768 && !platform.is('ios')" slot="start"></ion-searchbar>
     <ion-item lines="none" routerLink="/app/user/profile" *ngIf="userData.user && platform.width() >= 768" slot="end">
-      <ion-avatar slot="start">
+      <ion-avatar class="profile-picture" slot="start">
         <ion-img *ngIf="userData.user && userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user || !userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
       </ion-avatar>
