added progress bar and header to completeprofile page

--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -1,9 +1,13 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>completeprofile</ion-title>
+  <ion-toolbar class="title-container">
+    <ion-icon class="back-icon" name="chevron-back-outline"></ion-icon>
+    <ion-title class="title">Complete Your Profile</ion-title>
+    <progress-bar [progress]="25" [color]="'#488aff'"></progress-bar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-title>Card</ion-title>
+  </ion-card>
 </ion-content>
