--- a/src/app/pages/connect/focus-photo/focus-photo.page.html
+++ b/src/app/pages/connect/focus-photo/focus-photo.page.html
@@ -6,7 +6,7 @@
     <ion-title>{{filename}}</ion-title>
     <ion-buttons slot="end">
       <a [href]="imageUri" download>
-        <ion-button color="secondary">Save</ion-button>
+        <ion-button color="dark">Save</ion-button>
       </a>
     </ion-buttons>
   </ion-toolbar>
