changes for review on completeprofile

--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -7,7 +7,25 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-title>Card</ion-title>
-  </ion-card>
+  <!-- Mandatory profile action buttons -->
+  <div class="mandatory-actions">
+    <ion-title>Tip: Completed profiles have the most success on Restvo</ion-title>
+    <ion-card>
+      <ion-title>Card</ion-title>
+    </ion-card>
+    <ion-card>
+      <ion-title>Card</ion-title>
+    </ion-card>
+  </div>
+
+  <!-- Optional profile action buttons -->
+  <div class="optional-actions">
+    <ion-title>Optional:</ion-title>
+    <ion-card>
+      <ion-title>Card</ion-title>
+    </ion-card>
+    <ion-card>
+      <ion-title>Card</ion-title>
+    </ion-card>
+  </div>
 </ion-content>
