--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -11,10 +11,10 @@
   <div class="mandatory-actions">
     <ion-title>Tip: Completed profiles have the most success on Restvo</ion-title>
     <ion-card>
-      <ion-title>Card</ion-title>
+      <ion-title>Upload a Profile Photo</ion-title>
     </ion-card>
     <ion-card>
-      <ion-title>Card</ion-title>
+      <ion-title>Add a Bio</ion-title>
     </ion-card>
   </div>
 
@@ -22,10 +22,10 @@
   <div class="optional-actions">
     <ion-title>Optional:</ion-title>
     <ion-card>
-      <ion-title>Card</ion-title>
+      <ion-title>Enable Push Notifications</ion-title>
     </ion-card>
     <ion-card>
-      <ion-title>Card</ion-title>
+      <ion-title>Import Your Contacts</ion-title>
     </ion-card>
   </div>
 </ion-content>
