--- a/src/app/pages/user/completeprofile/completeprofile.page.scss
+++ b/src/app/pages/user/completeprofile/completeprofile.page.scss
@@ -1,14 +1,56 @@
-.title-container {
-  position: relative;
-}
+app-completeprofile {
+  .title-container {
+    position: relative;
+    height: 50px;
+    margin-top: 20px;
+  }
 
-.title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+  .title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
-.back-icon {
-  font-size: 30px;
+  .back-icon {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    font-size: 30px;
+  }
+
+  .title-reminder {
+    background-color: transparent !important;
+    box-shadow: none !important;
+    margin-top: 15px !important;
+
+    & small {
+      font-size: 15px;
+    }
+  }
+
+  .action-card {
+    padding: 10px 20px;
+    display: grid;
+    grid-template-columns: 50px 1fr 20px;
+    grid-gap: 20px;
+    align-items: center;
+  }
+
+  .dot-icon {
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #05668D;
+    height: 50px;
+    width: 50px;
+  }
+
+  .dot-plus {
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #DB4035;
+    height: 25px;
+    width: 25px;
+  }
 }
