added icons and styled

--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -8,27 +8,27 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light">
   <!-- Mandatory profile action buttons -->
   <div class="mandatory-actions">
     <ion-card class="title-reminder">
       <small>Tip: Completed profiles have the most success on Restvo </small>
     </ion-card>
     <ion-card class="action-card">
-      <span class="dot-icon"></span>
+      <img class="icon" src="assets/icon/user.svg" alt="">
       <div class="action-card-info">
         <ion-card-title>Upload a Profile Photo</ion-card-title>
         <ion-card-subtitle>Let other users see who they’re connecting with</ion-card-subtitle>
       </div>
-      <span class="dot-plus"></span>
+      <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
     <ion-card class="action-card">
-      <span class="dot-icon"></span>
+      <img class="icon" src="assets/icon/quotation.svg" alt="">
       <div class="action-card-info">
         <ion-card-title>Add a Bio</ion-card-title>
         <ion-card-subtitle>Tell people a little bit about yourself</ion-card-subtitle>
       </div>
-      <span class="dot-plus"></span>
+      <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
   </div>
 
@@ -38,20 +38,20 @@
       <small>Optional:</small>
     </ion-card>
     <ion-card class="action-card">
-      <span class="dot-icon"></span>
+      <img class="icon" src="assets/icon/notification.svg" alt="">
       <div class="action-card-info">
         <ion-card-title>Enable Push Notifications</ion-card-title>
         <ion-card-subtitle>Get notified when you recieve a new message or request</ion-card-subtitle>
       </div>
-      <span class="dot-plus"></span>
+      <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
     <ion-card class="action-card">
-      <span class="dot-icon"></span>
+      <img class="icon" src="assets/icon/contact.svg" alt="">
       <div class="action-card-info">
         <ion-card-title>Import Your Contacts</ion-card-title>
         <ion-card-subtitle>Find out who you know has already joined Restvo</ion-card-subtitle>
       </div>
-      <span class="dot-plus"></span>
+      <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
   </div>
 </ion-content>
