--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -512,7 +512,7 @@
           </ion-card>
         </ion-slide>
         <ion-slide class="program-slide">
-          <ion-card class="program-card" (click)="openPickFeature($event, 'User Defined Activity')">
+          <ion-card class="program-card" (click)="openPickFeature()">
             <ion-card-header class="ion-no-padding" color="lightgrey">
               <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
                 <ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon>
