forced to md styling on ionic cards

--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -17,16 +17,16 @@
     <ion-card class="action-card">
       <img class="icon" src="assets/icon/user.svg" alt="">
       <div class="action-card-info">
-        <ion-card-title>Upload a Profile Photo</ion-card-title>
-        <ion-card-subtitle>Let other users see who they’re connecting with</ion-card-subtitle>
+        <ion-card-title mode="md">Upload a Profile Photo</ion-card-title>
+        <ion-card-subtitle mode="md">Let other users see who they’re connecting with</ion-card-subtitle>
       </div>
       <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
     <ion-card class="action-card">
       <img class="icon" src="assets/icon/quotation.svg" alt="">
       <div class="action-card-info">
-        <ion-card-title>Add a Bio</ion-card-title>
-        <ion-card-subtitle>Tell people a little bit about yourself</ion-card-subtitle>
+        <ion-card-title mode="md">Add a Bio</ion-card-title>
+        <ion-card-subtitle mode="md">Tell people a little bit about yourself</ion-card-subtitle>
       </div>
       <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
@@ -40,16 +40,16 @@
     <ion-card class="action-card">
       <img class="icon" src="assets/icon/notification.svg" alt="">
       <div class="action-card-info">
-        <ion-card-title>Enable Push Notifications</ion-card-title>
-        <ion-card-subtitle>Get notified when you recieve a new message or request</ion-card-subtitle>
+        <ion-card-title mode="md">Enable Push Notifications</ion-card-title>
+        <ion-card-subtitle mode="md">Get notified when you recieve a new message or request</ion-card-subtitle>
       </div>
       <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
     <ion-card class="action-card">
       <img class="icon" src="assets/icon/contact.svg" alt="">
       <div class="action-card-info">
-        <ion-card-title>Import Your Contacts</ion-card-title>
-        <ion-card-subtitle>Find out who you know has already joined Restvo</ion-card-subtitle>
+        <ion-card-title mode="md">Import Your Contacts</ion-card-title>
+        <ion-card-subtitle mode="md">Find out who you know has already joined Restvo</ion-card-subtitle>
       </div>
       <img class="plus" src="assets/icon/plus.svg" alt="">
     </ion-card>
