changed ionic title to md styling

--- a/src/app/pages/user/completeprofile/completeprofile.page.html
+++ b/src/app/pages/user/completeprofile/completeprofile.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <div class="title-container">
       <ion-icon class="back-icon" name="chevron-back-outline"></ion-icon>
-      <ion-title class="title">Complete Your Profile</ion-title>
+      <ion-title class="title" mode="md">Complete Your Profile</ion-title>
     </div>
     <progress-bar [progress]="25" [color]="'#488aff'"></progress-bar>
   </ion-toolbar>
