improve invite page
1.8.3 (1)

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -44,7 +44,7 @@
         <ion-icon name="mail-open" slot="start" color="danger"></ion-icon>
         <div class="ion-text-wrap">
           <ion-label class="ion-margin-top">Accept Invitation</ion-label>
-          <p class="short-paragraph">Click to accept invitation to join.</p>
+          <p class="short-paragraph">Click to join {{moment.resource['en-US'].value[0]}}.</p>
         </div>
         <ion-icon name="chevron-forward-outline" color="primary" slot="end"></ion-icon>
       </ion-item>
